Add TodoAsyncResource class
